--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,20 @@
   "version": "1.0.0",
   "description": "Hobo Iot Backend",
   "main": "app/index.js",
+  "scripts": {
+    "dev": "./node_modules/.bin/gulp",
+    "lint": "./node_modules/.bin/gulp lint"
+  },
   "repository": "https://github.com/kaiyisg/hobo-iot",
-  "author": "Kai Yi",
-  "license": "MIT"
+  "author": "Kai Yi Lee",
+  "license": "MIT",
+  "dependencies": {
+    "eslint-config-airbnb-base": "^11.1.3",
+    "eslint-plugin-import": "^2.2.0",
+    "express": "^4.15.2",
+    "express-graphql": "^0.6.4",
+    "graphql": "^0.9.6",
+    "gulp": "^3.9.1",
+    "gulp-eslint": "^3.0.1"
+  }
 }
