--- a/backend/package.json
+++ b/backend/package.json
@@ -4,21 +4,26 @@
   "description": "Hobo Iot Backend",
   "main": "app/index.js",
   "scripts": {
-    "dev": "./node_modules/.bin/gulp"
+    "dev": "./node_modules/.bin/gulp",
+    "test": "mocha lib/**/**.spec.js"
   },
   "repository": "https://github.com/kaiyisg/hobo-iot",
   "author": "Kai Yi Lee",
   "license": "MIT",
   "dependencies": {
-    "eslint-config-airbnb-base": "^11.1.3",
-    "eslint-plugin-import": "^2.2.0",
     "express": "^4.15.2",
     "express-graphql": "^0.6.4",
-    "graphql": "^0.9.6",
+    "graphql": "^0.9.6"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "mocha": "^3.3.0",
     "gulp": "^3.9.1",
     "gulp-eslint": "^3.0.1",
     "gulp-nodemon": "^2.2.1",
     "gulp-yarn": "^0.1.1",
-    "run-sequence": "^1.2.2"
+    "run-sequence": "^1.2.2",
+    "eslint-config-airbnb-base": "^11.1.3",
+    "eslint-plugin-import": "^2.2.0"
   }
 }
