--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -26,6 +26,7 @@
           120
       ],
       "no-console": 0,
-      "no-param-reassign": 0
+      "no-param-reassign": 0,
+      "object-shorthand": ["warn", "always"]
   }
 }
