--- a/backend/package.json
+++ b/backend/package.json
@@ -17,13 +17,15 @@
   },
   "devDependencies": {
     "chai": "^3.5.0",
-    "mocha": "^3.3.0",
+    "eslint-config-airbnb-base": "^11.1.3",
+    "eslint-plugin-import": "^2.2.0",
     "gulp": "^3.9.1",
     "gulp-eslint": "^3.0.1",
     "gulp-nodemon": "^2.2.1",
     "gulp-yarn": "^0.1.1",
-    "run-sequence": "^1.2.2",
-    "eslint-config-airbnb-base": "^11.1.3",
-    "eslint-plugin-import": "^2.2.0"
+    "jest": "^20.0.1",
+    "jest-cli": "^20.0.1",
+    "mocha": "^3.3.0",
+    "run-sequence": "^1.2.2"
   }
 }
