--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "express": "^4.15.2",
     "express-graphql": "^0.6.4",
-    "graphql": "^0.9.6"
+    "graphql": "^0.9.6",
+    "rpi-gpio": "^0.8.1"
   },
   "devDependencies": {
     "chai": "^3.5.0",
