--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,8 @@
     "express": "^4.15.2",
     "express-graphql": "^0.6.4",
     "graphql": "^0.9.6",
-    "rpi-gpio": "^0.8.1"
+    "rpi-gpio": "^0.8.1",
+    "rpio": "^0.9.16"
   },
   "devDependencies": {
     "chai": "^3.5.0",
