--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,9 +7,16 @@
   "author": "Kai Yi Lee",
   "license": "MIT",
   "dependencies": {
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-relay-plugin": "^0.11.0",
+    "graphql": "^0.9.6",
     "react": "^15.5.4",
-    "react-dom": "^15.5.4"
+    "react-dom": "^15.5.4",
+    "react-relay": "^0.10.0",
+    "sync-request": "^4.0.3"
   },
   "scripts": {
     "dev": "./node_modules/.bin/webpack-dev-server",
